tests/snapshots/snapshots__budget_cmdk_1000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 1000 (1010 words)

ARCHITECTURE.md
     1→# Architecture
     2→
      →…
    46→## Approach
    47→
      →…
    50→### Discarded approach
    51→
      →…
    60→## Example
    61→
      →…
    92→## Performance
    93→
      →…
    96→## Groups
    97→
      →…
README.md
     5→# ⌘K [![cmdk minzip package size](https://img.shields.io/bundlephobia/minzip/cmdk)](https://www.npmjs.com/package/cmdk?activeTab=code) [![cmdk package version](https://img.shields.io/npm/v/cmdk.svg?colorB=green)](https://www.npmjs.com/package/cmdk)
     6→
      →…
     9→## Install
    10→
      →…
    15→## Use
    16→
      →…
    82→## Parts and styling
    83→
      →…
    86→### Command `[cmdk-root]`
    87→
      →…
   153→### Dialog `[cmdk-dialog]` `[cmdk-overlay]`
   154→
      →…
   180→### Input `[cmdk-input]`
   181→
      →…
   190→### List `[cmdk-list]`
   191→
      →…
   212→### Item `[cmdk-item]` `[data-disabled?]` `[data-selected?]`
   213→
      →…
   242→### Group `[cmdk-group]` `[hidden?]`
   243→
      →…
   256→### Separator `[cmdk-separator]`
   257→
      →…
   260→### Empty `[cmdk-empty]`
   261→
      →…
   264→### Loading `[cmdk-loading]`
   265→
      →…
   274→### `useCommandState(state => state.selectedField)`
   275→
      →…
   285→## Examples
   286→
      →…
   289→### Nested items
   290→
      →…
   338→### Show sub-items when searching
   339→
      →…
   361→### Asynchronous results
   362→
      →…
   397→### Use inside Popover
   398→
      →…
   426→### Drop in stylesheets
   427→
      →…
   430→## FAQ
   431→
      →…
   456→## History
   457→
      →…
   462→## Testing
   463→
      →…
cmdk/src/command-score.ts
    54→function commandScoreInner(
    55→  string,
    56→  abbreviation,
    57→  lowerString,
    58→  lowerAbbreviation,
    59→  stringIndex,
    60→  abbreviationIndex,
    61→  memoizedResults,
    62→) {
   150→function formatInput(string) {
   155→export function commandScore(string: string, abbreviation: string, aliases: string[]): number {
   156→  /* NOTE:
      →…
cmdk/src/index.tsx
   161→const defaultFilter …
   164→const useCommand …
   166→const useStore …
   659→/**
      →…
   664→const Item = React.forwardRef<HTMLDivElement, ItemProps>((props, forwardedRef) => {
   725→/**
      →…
   729→const Group = React.forwardRef<HTMLDivElement, GroupProps>((props, forwardedRef) => {
   770→/**
      →…
   774→const Separator = React.forwardRef<HTMLDivElement, SeparatorProps>((props, forwardedRef) => {
   783→/**
      →…
   787→const Input = React.forwardRef<HTMLInputElement, InputProps>((props, forwardedRef) => {
   829→/**
      →…
   833→const List = React.forwardRef<HTMLDivElement, ListProps>((props, forwardedRef) => {
   879→/**
      →…
   882→const Dialog = React.forwardRef<HTMLDivElement, DialogProps>((props, forwardedRef) => {
   896→/**
      →…
   899→const Empty = React.forwardRef<HTMLDivElement, EmptyProps>((props, forwardedRef) => {
   906→/**
      →…
   909→const Loading = React.forwardRef<HTMLDivElement, LoadingProps>((props, forwardedRef) => {
   955→/**
   956→ *
   957→ *
   958→ * Helpers
   959→ *
   960→ *
   961→ */
   962→
   963→function findNextSibling(el: Element, selector: string) {
   964→  let sibling = el.nextElementSibling
      →…
   972→function findPreviousSibling …
   981→function useAsRef …
   993→function useLazyRef …
  1003→/** Run a selector against the store state. */
  1004→function useCmdk<T = any>(selector: (state: State) => T): T {
  1005→  const store = useStore()
      →…
  1010→function useValue …
  1045→/** Imperatively run a function on the next layout effect cycle. */
  1046→const useScheduleLayoutEffect = () => {
  1047→  const [s, ss] = React.useState<object>()
      →…
  1061→function renderChildren …
  1071→function SlottableWithNestedChildren …
playwright.config.ts
     3→const config: PlaywrightTestConfig = {
     4→  forbidOnly: !!process.env.CI,
     5→  retries: process.env.CI ? 2 : 0,
      →…
website/README.md
     3→## Getting Started
     4→
     5→First, run the development server:
     6→
     7→```bash
     8→pnpm run dev
     9→```
    10→
    11→Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
    12→
    13→You can start editing the page by modifying `pages/index.tsx`. The page auto-updates as you edit the file.
    14→
    15→[API routes](https://nextjs.org/docs/api-routes/introduction) can be accessed on [http://localhost:3000/api/hello](http://localhost:3000/api/hello). This endpoint can be edited in `pages/api/hello.ts`.
    16→
    17→The `pages/api` directory is mapped to `/api/*`. Files in this directory are treated as [API routes](https://nextjs.org/docs/api-routes/introduction) instead of React pages.
    18→
    19→## Learn More
    20→
    21→To learn more about Next.js, take a look at the following resources:
    22→
    23→- [Next.js Documentation](https://nextjs.org/docs) - learn about Next.js features and API.
    24→- [Learn Next.js](https://nextjs.org/learn) - an interactive Next.js tutorial.
    25→
    26→You can check out [the Next.js GitHub repository](https://github.com/vercel/next.js/) - your feedback and contributions are welcome!
    27→
    28→## Deploy on Vercel
    29→
    30→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/new?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    31→
    32→Check out our [Next.js deployment documentation](https://nextjs.org/docs/deployment) for more details.
website/components/cmdk/framer.tsx
     4→export function FramerCMDK() {
     5→  const [value, setValue] = React.useState('Button')
      →…
website/components/cmdk/linear.tsx
     3→export function LinearCMDK() {
     4→  return (
      →…
    30→const items = [
    31→  {
    32→    icon: <AssignToIcon />,
    33→    label: 'Assign to...',
    34→    shortcut: ['A'],
    35→  },
    36→  {
      →…
website/components/cmdk/raycast.tsx
     7→export function RaycastCMDK() {
     8→  const { resolvedTheme: theme } = useTheme()
      →…
website/components/cmdk/vercel.tsx
     4→export function VercelCMDK() {
     5→  const ref = React.useRef<HTMLDivElement | null>(null)
      →…
website/components/code/index.tsx
     7→const theme = {
     8→  plain: {
     9→    color: 'var(--gray12)',
    10→    fontSize: 12,
      →…
    41→export function Code({ children }: { children: string }) {
    42→  return (
    43→    <Highlight {...defaultProps} theme={theme} code={children} language="jsx">
    44→      {({ className, style, tokens, getLineProps, getTokenProps }) => (
    45→        <pre className={`${className} ${styles.root}`} style={style}>
    46→          <button
    47→            aria-label="Copy Code"
    48→            onClick={() => {
    49→              copy(children)
    50→            }}
    51→          >
    52→            <CopyIcon />
    53→          </button>
      →…
website/components/icons/index.tsx
     3→export function FigmaIcon() {
    15→export function RaycastIcon() {
    28→export function YouTubeIcon() {
    40→export function SlackIcon() {
    79→export function VercelIcon() {
    87→export function LinearIcon({ style }: { style?: Object }) {
   110→export function Logo({ children, size = '20px' }: { children: React.ReactNode; size?: string }) {
   127→export function CopyIcon() {
   146→export function CopiedIcon() {
   154→export function GitHubIcon() {
   165→export function FramerIcon() {
website/next.config.js
     1→/** @type {import('next').NextConfig} */
     2→const nextConfig = {
     3→  reactStrictMode: true,
     4→  swcMinify: true,
     5→}
website/pages/_app.tsx
    13→const title = '⌘K'
    14→const description = 'Fast, composable, unstyled command menu for React'
    15→const siteUrl = 'https://cmdk.paco.me'
    17→export default function App({ Component, pageProps }: AppProps) {
    18→  return (
    19→    <>
    20→      <Head>
      →…
website/pages/_document.tsx
     5→export default class Document extends NextDocument {
     6→  render() {
     7→    return (
     8→      <Html lang="en">
     9→        <Head>
    10→          <link rel="preload" href="/inter-var-latin.woff2" as="font" type="font/woff2" crossOrigin="anonymous" />
    11→        </Head>
    12→        <body>
    13→          <Main />
    14→          <NextScript />
    15→        </body>
    16→      </Html>
    17→    )
    18→  }
    19→}
website/pages/index.tsx
    20→type TTheme = {
    21→  theme: Themes
    22→  setTheme: Function
    23→}
    25→type Themes = 'linear' | 'raycast' | 'vercel' | 'framer'
    27→const ThemeContext = React.createContext<TTheme>({} as TTheme)
    29→export default function Index() {
    30→  const [theme, setTheme] = React.useState<Themes>('raycast')
    31→
    32→  return (
      →…
    84→function CMDKWrapper(props: MotionProps & { children: React.ReactNode }) {
    99→//////////////////////////////////////////////////////////////////
   100→
   101→function InstallButton() {
   102→  const [copied, setCopied] = React.useState(false)
   103→
   104→  return (
   105→    <button
   106→      className={styles.installButton}
      →…
   123→function GitHubButton() {
   137→//////////////////////////////////////////////////////////////////
   138→
   139→const themes = [
   140→  {
   141→    icon: <RaycastIcon />,
   142→    key: 'raycast',
   143→  },
   144→  {
   145→    icon: <LinearIcon />,
   146→    key: 'linear',
   147→  },
   148→  {
      →…
   158→function ThemeSwitcher() {
   260→//////////////////////////////////////////////////////////////////
   261→
   262→function Codeblock() {
   263→  const code = `import { Command } from 'cmdk';
   264→
   265→<Command.Dialog open={open} onOpenChange={setOpen}>
   266→  <Command.Input />
   267→
      →…
   294→//////////////////////////////////////////////////////////////////
   295→
   296→function VersionBadge() {
   297→  return <span className={styles.versionBadge}>v{packageJSON.version}</span>
   298→}
   300→function Footer() {
   326→function RaunoSignature() {
   350→function PacoSignature() {
