tests/snapshots/snapshots__budget_cmdk_2000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 2000 (1969 words)

ARCHITECTURE.md
     1→# Architecture
     3→> Document is a work in progress!
     4→
     5→⌘K is born from a simple constraint: can you write a combobox with filtering and sorting using the [compound component](https://kentcdodds.com/blog/compound-components-with-react-hooks) approach? We didn't want to render items manually from an array:
     6→
     7→```tsx
     8→// No
     9→<>
    10→  {items.map((item) => {
    11→    return <div>{item}</div>
    12→  })}
    13→</>
    14→```
    15→
    16→We didn't want to provide a render prop:
    17→
    18→```tsx
    19→// No
    20→onItemRender={({ item }) => {
    21→  return <div>{item}</div>
    22→}}
    23→```
    24→
    25→Instead, we wanted to render components:
    26→
    27→```tsx
    28→// Yes
    29→<Item>My item</Item>
    30→```
    31→
    32→Especially, we wanted full component composition:
    33→
    34→```tsx
    35→// YES
    36→<>
    37→  <BlogItems />
    38→  {staticItems}
    39→</>
    40→```
    41→
      →…
    46→## Approach
    48→⌘K always keeps every item and group rendered in the React tree. Each item and group adds or removes itself from the DOM based on the search input. The DOM is authoritative. Item selection order is based on the DOM order, which is based on the React render order, which the consumer provides.
    49→
    50→### Discarded approach
    52→We did not use `React.Children` iteration because it will not support component composition. There is no way to "peek inside" the items contained within `<BlogItems />`, so those items cannot be filtered.
    53→
      →…
    60→## Example
    62→```tsx
    63→<Input value="b" />
    64→<List>
    65→  <Item>A</Item>
    66→  <Item>B</Item>
    67→</List>
    68→```
    69→
    70→The "A" item should not be shown! But we cannot remove it from the React tree, because the user controls it. In most cases, this is easy because the rendered items is sourced from a backing data array:
    71→
    72→```tsx
    73→<>
    74→  {['A', 'B'].map((item) => {
    75→    if (matches(item, search)) {
    76→      return <Item>{item}</Item>
    77→    }
    78→  })}
    79→</>
    80→```
    81→
    82→But in our case, the item will remain in the React tree and just be removed from the DOM:
    83→
    84→```tsx
    85→<List>
    86→  {/* returns `null`, no DOM created */}
    87→  <Item>A</Item>
    88→  <Item>B</Item>
    89→</List>
    90→```
    91→
    92→## Performance
    94→This is more expensive memory wise, because if there are 2,000 items but the list is filtered to only 2 items, we still allocate memory for 2,000 instances of the Item component. But it's our only option! Thankfully we can still keep the DOM size to 2 items.
    95→
    96→## Groups
    98→Item mount informs both the root and the parent group, which keeps track of items within it. Each group informs the root.
README.md
     5→# ⌘K
     7→⌘K is a command menu React component that can also be used as an accessible combobox. You render items, it filters and sorts them automatically. ⌘K supports a fully composable API <sup><sup>[How?](/ARCHITECTURE.md)</sup></sup>, so you can wrap items in other components or even as static JSX.
     8→
     9→## Install
    11→```bash
    12→pnpm install cmdk
    13→```
    14→
    15→## Use
    17→```tsx
    18→import { Command } from 'cmdk'
    19→
    20→const CommandMenu = () => {
    21→  return (
    22→    <Command label="Command Menu">
    23→      <Command.Input />
    24→      <Command.List>
    25→        <Command.Empty>No results found.</Command.Empty>
    26→
    27→        <Command.Group heading="Letters">
    28→          <Command.Item>a</Command.Item>
    29→          <Command.Item>b</Command.Item>
    30→          <Command.Separator />
    31→          <Command.Item>c</Command.Item>
    32→        </Command.Group>
    33→
    34→        <Command.Item>Apple</Command.Item>
    35→      </Command.List>
    36→    </Command>
    37→  )
    38→}
    39→```
    40→
    41→Or in a dialog:
    42→
    43→```tsx
    44→import { Command } from 'cmdk'
    45→
    46→const CommandMenu = () => {
    47→  const [open, setOpen] = React.useState(false)
    48→
    49→  // Toggle the menu when ⌘K is pressed
    50→  React.useEffect(() => {
    51→    const down = (e) => {
    52→      if (e.key === 'k' && (e.metaKey || e.ctrlKey)) {
    53→        e.preventDefault()
    54→        setOpen((open) => !open)
    55→      }
    56→    }
    57→
    58→    document.addEventListener('keydown', down)
    59→    return () => document.removeEventListener('keydown', down)
    60→  }, [])
    61→
    62→  return (
    63→    <Command.Dialog open={open} onOpenChange={setOpen} label="Global Command Menu">
    64→      <Command.Input />
    65→      <Command.List>
    66→        <Command.Empty>No results found.</Command.Empty>
    67→
    68→        <Command.Group heading="Letters">
    69→          <Command.Item>a</Command.Item>
    70→          <Command.Item>b</Command.Item>
    71→          <Command.Separator />
    72→          <Command.Item>c</Command.Item>
    73→        </Command.Group>
    74→
    75→        <Command.Item>Apple</Command.Item>
    76→      </Command.List>
    77→    </Command.Dialog>
    78→  )
    79→}
    80→```
    81→
    82→## Parts and styling
    84→All parts forward props, including `ref`, to an appropriate element. Each part has a specific data-attribute (starting with `cmdk-`) that can be used for styling.
    85→
    86→### Command `[cmdk-root]` …
   153→### Dialog `[cmdk-dialog]` `[cmdk-overlay]` …
   180→### Input `[cmdk-input]` …
   190→### List `[cmdk-list]` …
   212→### Item `[cmdk-item]` `[data-disabled?]` `[data-selected?]` …
   242→### Group `[cmdk-group]` `[hidden?]` …
   256→### Separator `[cmdk-separator]` …
   260→### Empty `[cmdk-empty]` …
   264→### Loading `[cmdk-loading]` …
   274→### `useCommandState(state => state.selectedField)` …
   285→## Examples
   287→Code snippets for common use cases.
   288→
   289→### Nested items …
   338→### Show sub-items when searching …
   361→### Asynchronous results …
   397→### Use inside Popover …
   426→### Drop in stylesheets …
   430→## FAQ
   432→**Accessible?** Yes. Labeling, aria attributes, and DOM ordering tested with Voice Over and Chrome DevTools. [Dialog](#dialog-cmdk-dialog-cmdk-overlay) composes an accessible Dialog implementation.
   433→
   434→**Virtualization?** No. Good performance up to 2,000-3,000 items, though. Read below to bring your own.
   435→
   436→**Filter/sort items manually?** Yes. Pass `shouldFilter={false}` to [Command](#command-cmdk-root). Better memory usage and performance. Bring your own virtualization this way.
   437→
   438→**React 18 safe?** Yes, required. Uses React 18 hooks like `useId` and `useSyncExternalStore`.
   439→
   440→**Unstyled?** Yes, use the listed CSS selectors.
   441→
   442→**Hydration mismatch?** No, likely a bug in your code. Ensure the `open` prop to `Command.Dialog` is `false` on the server.
   443→
   444→**React strict mode safe?** Yes. Open an issue if you notice an issue.
   445→
   446→**Weird/wrong behavior?** Make sure your `Command.Item` has a `key` and unique `value`.
   447→
   448→**Concurrent mode safe?** Maybe, but concurrent mode is not yet real. Uses risky approaches like manual DOM ordering.
   449→
   450→**React server component?** No, it's a client component.
   451→
   452→**Listen for ⌘K automatically?** No, do it yourself to have full control over keybind context.
   453→
   454→**React Native?** No, and no plans to support it. If you build a React Native version, let us know and we'll link your repository here.
   455→
   456→## History
   458→Written in 2019 by Paco ([@pacocoursey](https://twitter.com/pacocoursey)) to see if a composable combobox API was possible. Used for the Vercel command menu and autocomplete by Rauno ([@raunofreiberg](https://twitter.com/raunofreiberg)) in 2020. Re-written independently in 2022 with a simpler and more performant approach. Ideas and help from Shu ([@shuding\_](https://twitter.com/shuding_)).
   459→
   460→[use-descendants](https://github.com/pacocoursey/use-descendants) was extracted from the 2019 version.
   461→
   462→## Testing
   464→First, install dependencies and Playwright browsers:
   465→
   466→```bash
   467→pnpm install
   468→pnpm playwright install
   469→```
   470→
   471→Then ensure you've built the library:
   472→
   473→```bash
   474→pnpm build
   475→```
   476→
   477→Then run the tests using your local build against real browser engines:
   478→
   479→```bash
   480→pnpm test
   481→```
cmdk/src/command-score.ts
    54→function commandScoreInner(
    55→  string,
    56→  abbreviation,
    57→  lowerString,
    58→  lowerAbbreviation,
    59→  stringIndex,
    60→  abbreviationIndex,
    61→  memoizedResults,
    62→) {
   150→function formatInput(string) {
   155→export function commandScore(string: string, abbreviation: string, aliases: string[]): number {
   156→  /* NOTE:
   157→   * in the original, we used to do the lower-casing on each recursive call, but this meant that toLowerCase()
   158→   * was the dominating cost in the algorithm, passing both is a little ugly, but considerably faster.
   159→   */
      →…
cmdk/src/index.tsx
   161→const defaultFilter …
   164→const useCommand …
   166→const useStore …
   659→/**
      →…
   664→const Item = React.forwardRef<HTMLDivElement, ItemProps>((props, forwardedRef) => {
   725→/**
      →…
   729→const Group = React.forwardRef<HTMLDivElement, GroupProps>((props, forwardedRef) => {
   770→/**
      →…
   774→const Separator = React.forwardRef<HTMLDivElement, SeparatorProps>((props, forwardedRef) => {
   783→/**
      →…
   787→const Input = React.forwardRef<HTMLInputElement, InputProps>((props, forwardedRef) => {
   829→/**
      →…
   833→const List = React.forwardRef<HTMLDivElement, ListProps>((props, forwardedRef) => {
   879→/**
      →…
   882→const Dialog = React.forwardRef<HTMLDivElement, DialogProps>((props, forwardedRef) => {
   896→/**
      →…
   899→const Empty = React.forwardRef<HTMLDivElement, EmptyProps>((props, forwardedRef) => {
   906→/**
      →…
   909→const Loading = React.forwardRef<HTMLDivElement, LoadingProps>((props, forwardedRef) => {
   955→/**
   956→ *
   957→ *
   958→ * Helpers
   959→ *
   960→ *
   961→ */
   962→
   963→function findNextSibling(el: Element, selector: string) {
   964→  let sibling = el.nextElementSibling
      →…
   972→function findPreviousSibling …
   981→function useAsRef …
   993→function useLazyRef …
  1003→/** Run a selector against the store state. */
  1004→function useCmdk<T = any>(selector: (state: State) => T): T {
  1005→  const store = useStore()
      →…
  1010→function useValue …
  1045→/** Imperatively run a function on the next layout effect cycle. */
  1046→const useScheduleLayoutEffect = () => {
  1047→  const [s, ss] = React.useState<object>()
      →…
  1061→function renderChildren …
  1071→function SlottableWithNestedChildren …
playwright.config.ts
     3→const config: PlaywrightTestConfig = {
website/README.md
     3→## Getting Started
     5→First, run the development server:
     6→
     7→```bash
     8→pnpm run dev
     9→```
    10→
    11→Open [http://localhost:3000](http://localhost:3000) with your browser to see the result.
    12→
    13→You can start editing the page by modifying `pages/index.tsx`. The page auto-updates as you edit the file.
    14→
    15→[API routes](https://nextjs.org/docs/api-routes/introduction) can be accessed on [http://localhost:3000/api/hello](http://localhost:3000/api/hello). This endpoint can be edited in `pages/api/hello.ts`.
    16→
    17→The `pages/api` directory is mapped to `/api/*`. Files in this directory are treated as [API routes](https://nextjs.org/docs/api-routes/introduction) instead of React pages.
    18→
    19→## Learn More
    21→To learn more about Next.js, take a look at the following resources:
    22→
    23→- [Next.js Documentation](https://nextjs.org/docs) - learn about Next.js features and API.
    24→- [Learn Next.js](https://nextjs.org/learn) - an interactive Next.js tutorial.
    25→
    26→You can check out [the Next.js GitHub repository](https://github.com/vercel/next.js/) - your feedback and contributions are welcome!
    27→
    28→## Deploy on Vercel
    30→The easiest way to deploy your Next.js app is to use the [Vercel Platform](https://vercel.com/new?utm_medium=default-template&filter=next.js&utm_source=create-next-app&utm_campaign=create-next-app-readme) from the creators of Next.js.
    31→
    32→Check out our [Next.js deployment documentation](https://nextjs.org/docs/deployment) for more details.
website/components/cmdk/framer.tsx
     4→export function FramerCMDK() {
     5→  const [value, setValue] = React.useState('Button')
     6→  return (
     7→    <div className="framer">
      →…
website/components/cmdk/linear.tsx
     3→export function LinearCMDK() {
     4→  return (
     5→    <div className="linear">
     6→      <Command>
      →…
    30→const items = [
    31→  {
    32→    icon: <AssignToIcon />,
    33→    label: 'Assign to...',
    34→    shortcut: ['A'],
    35→  },
    36→  {
      →…
website/components/cmdk/raycast.tsx
     7→export function RaycastCMDK() {
     8→  const { resolvedTheme: theme } = useTheme()
     9→  const [value, setValue] = React.useState('linear')
    10→  const inputRef = React.useRef<HTMLInputElement | null>(null)
      →…
website/components/cmdk/vercel.tsx
     4→export function VercelCMDK() {
     5→  const ref = React.useRef<HTMLDivElement | null>(null)
     6→  const [inputValue, setInputValue] = React.useState('')
     7→
      →…
website/components/code/index.tsx
     7→const theme = {
     8→  plain: {
     9→    color: 'var(--gray12)',
    10→    fontSize: 12,
    11→    fontFamily: 'Menlo, monospace',
    12→  },
      →…
    41→export function Code({ children }: { children: string }) {
    42→  return (
    43→    <Highlight {...defaultProps} theme={theme} code={children} language="jsx">
    44→      {({ className, style, tokens, getLineProps, getTokenProps }) => (
    45→        <pre className={`${className} ${styles.root}`} style={style}>
    46→          <button
    47→            aria-label="Copy Code"
    48→            onClick={() => {
    49→              copy(children)
    50→            }}
    51→          >
    52→            <CopyIcon />
    53→          </button>
      →…
website/components/icons/index.tsx
     3→export function FigmaIcon() {
    15→export function RaycastIcon() {
    28→export function YouTubeIcon() {
    40→export function SlackIcon() {
    79→export function VercelIcon() {
    87→export function LinearIcon({ style }: { style?: Object }) {
   110→export function Logo({ children, size = '20px' }: { children: React.ReactNode; size?: string }) {
   127→export function CopyIcon() {
   146→export function CopiedIcon() {
   154→export function GitHubIcon() {
   165→export function FramerIcon() {
website/next.config.js
     1→/** @type {import('next').NextConfig} */
     2→const nextConfig = {
     3→  reactStrictMode: true,
     4→  swcMinify: true,
     5→}
website/pages/_app.tsx
    13→const title = '⌘K'
    14→const description = 'Fast, composable, unstyled command menu for React'
    15→const siteUrl = 'https://cmdk.paco.me'
    17→export default function App({ Component, pageProps }: AppProps) {
    18→  return (
    19→    <>
    20→      <Head>
      →…
website/pages/_document.tsx
     5→export default class Document extends NextDocument {
     6→  render() {
     7→    return (
     8→      <Html lang="en">
     9→        <Head>
    10→          <link rel="preload" href="/inter-var-latin.woff2" as="font" type="font/woff2" crossOrigin="anonymous" />
    11→        </Head>
    12→        <body>
    13→          <Main />
    14→          <NextScript />
    15→        </body>
    16→      </Html>
    17→    )
    18→  }
    19→}
website/pages/index.tsx
    20→type TTheme = {
    21→  theme: Themes
    22→  setTheme: Function
    23→}
    25→type Themes = 'linear' | 'raycast' | 'vercel' | 'framer'
    27→const ThemeContext = React.createContext<TTheme>({} as TTheme)
    29→export default function Index() {
    30→  const [theme, setTheme] = React.useState<Themes>('raycast')
    31→
    32→  return (
      →…
    84→function CMDKWrapper(props: MotionProps & { children: React.ReactNode }) {
    99→//////////////////////////////////////////////////////////////////
   100→
   101→function InstallButton() {
   102→  const [copied, setCopied] = React.useState(false)
   103→
   104→  return (
   105→    <button
   106→      className={styles.installButton}
      →…
   123→function GitHubButton() {
   137→//////////////////////////////////////////////////////////////////
   138→
   139→const themes = [
   140→  {
   141→    icon: <RaycastIcon />,
   142→    key: 'raycast',
   143→  },
   144→  {
   145→    icon: <LinearIcon />,
   146→    key: 'linear',
   147→  },
   148→  {
      →…
   158→function ThemeSwitcher() {
   260→//////////////////////////////////////////////////////////////////
   261→
   262→function Codeblock() {
   263→  const code = `import { Command } from 'cmdk';
   264→
   265→<Command.Dialog open={open} onOpenChange={setOpen}>
   266→  <Command.Input />
   267→
      →…
   294→//////////////////////////////////////////////////////////////////
   295→
   296→function VersionBadge() {
   297→  return <span className={styles.versionBadge}>v{packageJSON.version}</span>
   298→}
   300→function Footer() {
   326→function RaunoSignature() {
   350→function PacoSignature() {
